fix text overflow and hide/show for game display

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -42,3 +42,9 @@ body {
 .index-cell {
   border: 1px solid #774936;
 }
+@media (max-width: 800px) {
+  .index-cell{
+    word-wrap: break-word;
+    font-size: 12px;
+  }
+}
